--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-3 text-center">Anytime is Train Time</h1>
-          <p class="lead text-center">Choo Choo. Chee Chee.</p>
+          <p class="lead text-center">Chugga Chugga Choo Choo!!</p>
         </div>
       </div>
 
@@ -47,7 +47,7 @@
         <div class="card-header bg-primary text-white">
           Current Train Schedule
         </div>
-        <div class="card-body font-weight-normal">
+        <div class="card-body top-card font-weight-normal">
             <table class="table">
                 <thead>
                     <tr>
@@ -86,7 +86,7 @@
         <div class="card-header bg-primary text-white">
           Add Train
         </div>
-        <div class="card-body">
+        <div class="card-body bottom-card">
                 <form>
 
                     <div class="form-group">
